themes/default/css/template2.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap');


/* 
    ajustes na responsividade
*/
.tag-row {
    width: 100%;
    flex-wrap: wrap;

}

/* .innerLR .tag-row {
    display: flex;
    justify-content: space-between;
} */
.modal-container-buttons {
    display: flex;
    justify-content: end;
}

/* 
    butões
*/
.tag-button,
.tag-button:hover {
    background-color: #3F45EA;
    text-decoration: none;
    text-align: center;
    border: none;
    border-radius: 4px;
    color: white;
    margin-right: 10px;
    font-family: 'Inter', sans-serif;
    font-weight: 500;
    cursor: pointer;
}

.tag-button:hover {
    background-color: #272B96;
}

.tag-button-light,
.tag-button-light:hover {
    background-color: #EFF2F5;
    color: #1d1d1b;
    text-decoration: none;
    text-align: center;
    border-radius: 4px;
    margin-right: 10px;
    font-family: 'Inter', sans-serif;
    font-weight: 500;
    cursor: pointer;
}

.tag-button-light:hover {
    background-color: #e6e6e6;
}

.medium-button {
    width: 163px;
    height: 44px;
    font-size: 14px;
    padding: 10px 12px;
}

.small-button {
    width: 124px;
    height: 32px;
    display: flex;
    border: none;
    align-items: center;
    justify-content: center;
}

.small-button.wide-button {
    width: auto;
}

.tag-button.next {
    float: none;
}

.tag-buttons-container.buttons {
    width: auto;
    height: 32px;
    display: flex;
    justify-content: space-between;
    top: 67px;
    ;
    padding-left: 10px;
}

/* 
    listagens
*/
.tag-table td {
    /* background: #eaeaf8; */
    background: #EAEDFC;
}

.tag-table tr td:first-child {
    border-radius: 4px 0 0 4px;
}

.tag-table tr td:last-child {
    border-radius: 0 4px 4px 0;
}

.tag-table.table-striped tbody>tr:nth-child(odd)>td {
    background-color: #eaeaf8;
}

.grid-view .filters input {
    /* width: 413px; */
    border: 1px solid #ccc;
    margin: 0px 0px 2px 12px;
}

.student-table.tag-table thead tr.filters input,
.curricularmatrix-table.tag-table thead tr.filters input {
    width: 260px;
}

/* 
    paginação
*/
.widget ul.yiiPager .selected a,
.widget ul.yiiPager a:link {
    color: #3F45EA;
    border-color: #3F45EA;
    padding: 0;
    width: 20px;
    height: 20px;
    border-radius: 100%;
    text-align: center;
}

.widget ul.yiiPager .selected a {
    background: #222C64;
    color: #ccc;
}

.widget ul.yiiPager .next a:link,
.widget ul.yiiPager .previous a:link {
    width: auto;
    border-radius: 10px;
    margin-left: 5px;
    padding: 0 5px;
}

/* .tag-inner {
    padding: 0px 10px 0;
    position: relative;
    margin-bottom: 30px;
} */
.tag-inner .widget {
    border-radius: 4px;
}

/* 
    login
*/
.tag-form-login {
    max-width: 332px;
    background-color: #272B96;
}

/* 
 Matricula em grupo
*/
.select-search-on,
.select-search-on ul.select2-choices {
    border-radius: 4px;
    width: 426px;
    padding: 0;
}

.school-schedules input[type="time"],
.test-dates input[type=date] {
    width: 413px;
    height: 30px;
    padding: 0 6px;
}

/* 
    inputs
*/
.small-input {
    width: 120px;
}

.control-input.input2 {
    height: 30px;
}

/* 
    selects
*/
.select2-drop.select2-display-none.select2-drop-active {
    margin-top: -1px;
}

/* 
    notas
*/
.row-grades .center {
    width: 100%;
}

.row-grades .center .select2-container {
    width: 100%;
}

.row-grades .center .school-days-group1,
.row-grades .center .frequency-fields,
.row-grades .center .frequency-percentage {
    margin-right: 10px;
}

/* 
    modais
*/

#teachingdata-dialog-form .select2-container .select2-choice {
    width: 361px;
}

/*
    home-page
*/
.home-page-table-header {
    background-color: #222C64;
    height: 36px;
    display: flex;
    align-items: center;
    margin-bottom: 4px;
    border-radius: 4px;

}

.home-page-table-header h5 {
    color: #ffffff;
    font-weight: 500;
    margin: 0px 0px 0px 18px;
}

.home-page-table-item {
    height: 42px;
    list-style-type: none;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 4px;
    border-radius: 4px;
    padding: 0 38px 0 13px;
}

.home-page-table-item img {
    height: 24px;
    width: 24px;
    padding: 5px;
    margin-right: 13px;
    border-radius: 100%;
}

.home-page-table-item.gray {
    /* background-color: #ECECEC; */
    background-color: #eaeaf8;
}

.home-page-table-item.blue {
    background-color: #eaeaf8;
    /* background-color: #EAEDFC; */
}

.home-page-table-button.load-more {
    font-family: 'Inter', sans-serif;
    background-color: #222C64 !important;
}

.home-page-table-button.load-more:hover {
    box-shadow: none;
}

/* 
    fullmenu-toggle-button
*/


.logo-container {
    display: flex;
    align-items: center;
    width: 100%;
    margin-left: 20px;
    margin-top: 23px;
    margin-bottom: 65px;
}


@media (max-width: 992px) {
    .voltar-tobnav {
        display: none;
    }
}

.ui-widget-overlay {
    background: black !important;
}

.control-label.required {
    width: 352px;
    text-align: left;
    font-weight: bold;
}

.control-label.required.small-label {
    width: auto;
    text-align: left;
    font-weight: bold;
}

.control-label.required.indicator::after {
    content: ' *';
}

.element::webkit-scrollbar {
    width: 0 ! important
}

.electronic-diary-label {
    width: auto !important;
}

.select2-container.select-search-on.electronic-diary-input {
    width: 160px !important;
}

.select2-container.select-search-on.electronic-diary-input .select2-choice {
    width: 150px !important;
}

.electronic-diary.date-container {
    display: flex;
}

.electronic-diary.date-container input[type="text"] {
    width: 150px;
    margin-right: 10px;
}

.electronic-diary.date-container input[type="text"] {
    width: 150px;
    margin-right: 10px;
}

.select2-container.select-search-on.control-input.frequency-input,
.select2-container.select-search-on.control-input.classContents-input {
    width: 170px !important;
}

.select2-container.select-search-on.control-input.frequency-input .select2-choice,
.select2-container.select-search-on.control-input.classContents-input .select2-choice {
    width: 160px !important;

}

.control-group.aluno {
    margin-left: 32px;
}

table.dataTable.lunch-table {
    margin-top: 30px;
}

.widget .widget-body {
    padding: 0px;
}


table.dataTable.no-footer {
    border-bottom: none !important;
}

.emblema {
    margin: 0px 0px 0px 10px;
}

.selecao_dias {
    margin: 0px 0px 0px -25px
}

.selecao_dias-checkbox {
    text-align: center
}



.table-primary tbody tr.odd:hover td,
.table-primary tbody tr.even:hover td {
    background: #d5dded;
}

input[type="checkbox"] {
    margin: 0px 9px 0px;
}

input[type="checkbox"]:checked {
    margin: 0px 9px 0px 0px;
}

@font-face {
    font-family: 'icone-tag';
    src: url('/themes/default/fonts/icone-tag.ttf');
  }

  .icones{
    font-family: "icone-tag", sans-serif;
  }

